--- a/src/net/hexar/json2pojo/JsonEntryDialog.form
+++ b/src/net/hexar/json2pojo/JsonEntryDialog.form
@@ -57,7 +57,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <selected value="true"/>
+              <enabled value="true"/>
+              <selected value="false"/>
               <text value="Field names start with 'm'"/>
               <toolTipText value="Field names are generated with an 'm' prefix."/>
             </properties>
